Criando Cadastro Aluguel de Carro

--- a/src/main/webapp/acessorio/CadastroAcessorio.xhtml
+++ b/src/main/webapp/acessorio/CadastroAcessorio.xhtml
@@ -13,7 +13,7 @@
 			<o:viewParam name="acessorio" value="#{cadastroAcessorioBean.acessorio}" />
 		</f:metadata>
     
-    	<h1>Novo acessorio</h1>
+    	<h1>Novo Acessório</h1>
     	
     	<h:form id="frmCadastro">
     		<p:messages id="messages" autoUpdate="true" closable="true" />
