Correção de bugs

--- a/src/main/webapp/modeloCarro/PesquisaModeloCarro.xhtml
+++ b/src/main/webapp/modeloCarro/PesquisaModeloCarro.xhtml
@@ -5,10 +5,10 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="titulo">Pesquisa de modelo de carro</ui:define>
+    <ui:define name="titulo">Pesquisa de Modelo de Carro</ui:define>
     
     <ui:define name="corpo">
-    	<h1>Pesquisa de modelo de carro</h1>
+    	<h1>Pesquisa de Modelo de Carro</h1>
     	
     	<h:form id="frmPesquisa">
     		<p:messages id="messages" autoUpdate="true" closable="true" />
