--- a/src/main/webapp/acessorio/PesquisaAcessorios.xhtml
+++ b/src/main/webapp/acessorio/PesquisaAcessorios.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="titulo">Pesquisa de Acessório</ui:define>
     
     <ui:define name="corpo">
-    	<h1>Pesquisa de acessórios</h1>
+    	<h1>Pesquisa de Acessórios</h1>
     	
     	<h:form id="frmPesquisa">
     		<p:messages id="messages" autoUpdate="true" closable="true" />
