--- a/src/main/webapp/carro/PesquisaCarros.xhtml
+++ b/src/main/webapp/carro/PesquisaCarros.xhtml
@@ -28,6 +28,9 @@
 		    		<p:column headerText="Placa">
 		    			<h:outputText value="#{carro.placa}" />
 		    		</p:column>
+		    		<p:column headerText="Chassi">
+		    			<h:outputText value="#{carro.chassi}" />
+		    		</p:column>
 		    		<p:column headerText="Cor">
 		    			<h:outputText value="#{carro.cor}" />
 		    		</p:column>
@@ -35,7 +38,7 @@
 		    			<h:outputText value="#{carro.valorDiaria}" />
 		    		</p:column>
 		    		<p:column headerText="Acessórios" style="width: 100px; text-align: center">
-		    			<p:commandButton icon="ui-icon-extlink" title="Acessórios" action="#{pesquisaCarroBean.buscarCarroComAcessorio}"
+		    			<p:commandButton icon="ui-icon-extlink" title="Acessórios" action="#{pesquisaCarroBean.buscarCarroComAcessorios}"
 		    					process="@this" oncomplete="mostraAcessorios.show()" update=":frmPesquisa:mostraAcessoriosDialog">
 		    				<f:setPropertyActionListener target="#{pesquisaCarroBean.carroSelecionado}" value="#{carro}" />
 		    			</p:commandButton>
