--- a/src/main/webapp/modeloCarro/CadastroModeloCarro.xhtml
+++ b/src/main/webapp/modeloCarro/CadastroModeloCarro.xhtml
@@ -39,6 +39,13 @@
 						itemLabel="#{fabricante.nome}" itemValue="#{fabricante}"/>
 	    		</p:selectOneMenu>
 	    		
+	    		<p:outputLabel value="Categoria" for="categoria"/>
+	    		<p:selectOneMenu id="categoria" value="#{cadastroModeloCarroBean.modeloCarro.categoria}">
+	    			<f:selectItem itemLabel="Selecione a categoria" />
+	    			<f:selectItems value="#{cadastroModeloCarroBean.categorias}" var="categoria" 
+						itemLabel="#{categoria.descricao}" itemValue="#{categoria}"/>
+	    		</p:selectOneMenu>
+	    		
 	    		<p:outputLabel value="Modelo" for="modelo"/>
 	    		<p:inputText id="modelo" size="60" maxlength="80" value="#{cadastroModeloCarroBean.modeloCarro.descricao}"/>
 	    	</p:panelGrid>
