Corrigindo erro ao editar acessório

--- a/src/main/webapp/carro/CadastroCarro.xhtml
+++ b/src/main/webapp/carro/CadastroCarro.xhtml
@@ -52,7 +52,7 @@
 			    
 			    <p:outputLabel value="Acessórios" for="acessorios"/>
 				<p:selectManyCheckbox id="acessorios" styleClass="many-checkbox" 
-						value="#{cadastroCarroBean.carro.acessorios}" converter="acessorioConverter">
+						value="#{cadastroCarroBean.carro.acessorios}">
 					<f:selectItems value="#{cadastroCarroBean.acessorios}" var="acessorio" 
 						itemLabel="#{acessorio.descricao}" itemValue="#{acessorio}" />
 				</p:selectManyCheckbox>			    
