--- a/src/main/webapp/carro/PesquisaCarros.xhtml
+++ b/src/main/webapp/carro/PesquisaCarros.xhtml
@@ -28,6 +28,11 @@
 		    		<p:column headerText="Placa">
 		    			<h:outputText value="#{carro.placa}" />
 		    		</p:column>
+		    		
+		    		<p:column headerText="Chassi">
+		    			<h:outputText value="#{carro.chassi}" />
+		    		</p:column>
+		    		
 		    		<p:column headerText="Cor">
 		    			<h:outputText value="#{carro.cor}" />
 		    		</p:column>
