Alterando a Pesquisa de Carro

--- a/src/main/webapp/carro/PesquisaCarros.xhtml
+++ b/src/main/webapp/carro/PesquisaCarros.xhtml
@@ -25,6 +25,11 @@
 		    		<p:column headerText="Código" style="text-align: center; width: 100px">
 		    			<h:outputText value="#{carro.codigo}" />
 		    		</p:column>
+		    		
+		    		<p:column headerText="Modelo do Carro">
+		    			<h:outputText value="#{carro.modeloCarro.descricao}" />
+		    		</p:column>
+		    		
 		    		<p:column headerText="Placa">
 		    			<h:outputText value="#{carro.placa}" />
 		    		</p:column>
